--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -1,44 +1,113 @@
 {
   "search": "Ara",
-  "search_not_found_description": "İçin sonuç bulunamadı",
+  "search_not_found_description": "Arama için sonuç bulunamadı:",
   "popular_search": "Popüler Aramalar",
+  "delete": "Sil",
+  "yes": "Evet",
+  "no": "Hayır",
+  "add": "Ekle",
+  "back": "Geri",
+  "next": "İleri",
   "settings": {
     "settings_title": "Ayarlar",
-    "settings_description": "Uygulama deneyimini kişiselleştirmek için ayarları kullan.",
+    "settings_description": "Uygulama deneyiminizi kişiselleştirmek için ayarları kullanın.",
     "select_language": "Dil Seçimi",
-    "select_language_description": "Dil tercihiniz anında uygulanır ve cihazınızda kaydedilir.",
-    "dark_mode": "Karanlık Tema",
-    "dark_mode_description": "Göz yorgunluğunu azaltmak için düşük ışıkta daha iyi bir deneyim sunar.",
+    "select_language_description": "Dil tercihiniz anında uygulanır ve cihazınızda saklanır.",
+    "dark_mode": "Karanlık Temayı Etkinleştir",
+    "dark_mode_description": "Özellikle düşük ışık ortamlarında göz yorgunluğunu azaltmak için koyu arayüze geçiş yapın.",
     "turkish": "Türkçe",
     "english": "İngilizce"
   },
   "menu": {
-    "dashboard": "Kontrol Paneli",
-    "home": "Ana Sayfa",
-    "team": "Takımlar",
-    "user": "Kullanıcılar",
-    "todo": "Yapılacaklar",
-    "operation": "Operasyonlar",
-    "operation1": "Operasyonlar"
+    "dashboard": "Gösterge Paneli",
+    "management": "Yönetim",
+    "home": "Evler",
+    "customer": "Müşteriler",
+    "order": "Siparişler"
   },
   "modules": {
-    "teams": {
-      "index": "Takımlar",
-      "create": "Takım Oluştur",
-      "show": "Takım Detayları",
-      "edit": "Takımı Düzenle",
-      "save": "Takımı Kaydet",
-      "update": "Takımı Güncelle"
+    "customers": {
+      "index": "Müşteriler",
+      "create": "Müşteri Ekle",
+      "show": "Müşteri Detayları",
+      "edit": "Müşteri Düzenle",
+      "save": "Müşteri Kaydet",
+      "update": "Müşteri Güncelle"
+    },
+    "orders": {
+      "index": "Siparişler",
+      "create": "Sipariş Oluştur",
+      "show": "Sipariş Detayları",
+      "edit": "Siparişi Düzenle",
+      "save": "Siparişi Kaydet",
+      "update": "Siparişi Güncelle"
     }
   },
   "views": {
-    "teams": {
-      "id": "Takım ID",
-      "name": "Takım Adı",
-      "name_description": "Lütfen takım adını belirleyin.",
-      "description": "Takım Açıklaması",
-      "description_description": "Lütfen takımın açıklamasını belirleyin.",
-      "created_at": "Oluşturulma Tarihi"
+    "customer": {
+      "name": "Müşteri Adı",
+      "name_description": "Müşterinin tam adını giriniz.",
+      "email": "E-posta Adresi",
+      "email_description": "Geçerli bir e-posta adresi giriniz.",
+      "phone": "Telefon Numarası",
+      "phone_description": "Müşterinin telefon numarasını giriniz.",
+      "status": "Durum",
+      "status_description": "Müşterinin durumunu seçiniz.",
+      "type": "Müşteri Türü",
+      "type_description": "Bireysel mi kurumsal mı olduğunu belirtiniz.",
+      "active": "Aktif",
+      "inactive": "Pasif",
+      "contact_person": "Yetkili Kişi",
+      "contact_person_description": "Bu müşteri için yetkili kişiyi giriniz.",
+      "tax_number": "Vergi Numarası",
+      "tax_number_description": "Varsa vergi numarasını giriniz.",
+      "tax_office": "Vergi Dairesi",
+      "tax_office_description": "Vergi dairesi adını giriniz.",
+      "country": "Ülke",
+      "country_description": "Müşterinin bulunduğu ülkeyi belirtiniz.",
+      "address": "Adres",
+      "address_description": "Müşterinin tam adresini giriniz.",
+      "notes": "Notlar",
+      "notes_description": "Bu müşteri hakkında ek bilgiler giriniz.",
+      "sidebar_title": "Müşteri Bilgileri",
+      "created_at": "Oluşturulma Tarihi",
+      "status_true": "Aktif",
+      "status_false": "Pasif",
+      "type_individual": "Bireysel",
+      "type_company": "Kurumsal"
+    },
+    "order": {
+      "name": "Sipariş ID",
+      "step_customer": "Müşteri Bilgileri",
+      "step_products": "Ürünler",
+      "step_final": "Sipariş Detayları",
+      "step_preview": "Önizleme",
+      "customer": "Müşteri",
+      "customer_description": "Siparişi veren müşteriyi seçiniz.",
+      "order_note": "Sipariş Notu",
+      "order_note_description": "Sipariş hakkında ek bilgi veya açıklama.",
+      "product": "Ürün",
+      "product_description": "Siparişe eklenecek ürünü seçiniz.",
+      "products": "Ürünler",
+      "quantity": "Adet",
+      "quantity_description": "Üründen kaç adet sipariş edildiğini belirtiniz.",
+      "price": "Fiyat",
+      "price_description": "Seçilen ürünün birim fiyatı.",
+      "total_price": "Toplam Tutar",
+      "date": "Sipariş Tarihi",
+      "date_description": "Siparişin oluşturulduğu tarihi belirleyiniz.",
+      "shipping_method": "Kargo Yöntemi",
+      "shipping_method_description": "Siparişin nasıl gönderileceğini belirtiniz.",
+      "status": "Durum",
+      "status_description": "Siparişin mevcut durumunu seçiniz.",
+      "status_pending": "Beklemede",
+      "status_shipped": "Kargolandı",
+      "status_delivered": "Teslim Edildi",
+      "invoice": "Fatura Oluşturulsun mu?",
+      "invoice_description": "Bu sipariş için fatura oluşturmak ister misiniz?",
+      "total_products": "Toplam Ürün",
+      "total": "Toplam",
+      "product_details": "Ürün Detayları"
     }
   }
 }
