--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -1,34 +1,37 @@
 {
+  "welcome": "Hoş geldin",
   "search": "Ara",
-  "search_not_found_description": "Arama için sonuç bulunamadı:",
-  "popular_search": "Popüler Aramalar",
+  "search_not_found_description": "Sonuç bulunamadı",
+  "popular_search": "Popüler Arama",
   "delete": "Sil",
   "yes": "Evet",
   "no": "Hayır",
   "add": "Ekle",
   "back": "Geri",
   "next": "İleri",
+  "recent": "Son",
   "settings": {
     "settings_title": "Ayarlar",
-    "settings_description": "Uygulama deneyiminizi kişiselleştirmek için ayarları kullanın.",
+    "settings_description": "Uygulama deneyimini kişiselleştirmek için ayarları kullan.",
     "select_language": "Dil Seçimi",
-    "select_language_description": "Dil tercihiniz anında uygulanır ve cihazınızda saklanır.",
-    "dark_mode": "Karanlık Temayı Etkinleştir",
-    "dark_mode_description": "Özellikle düşük ışık ortamlarında göz yorgunluğunu azaltmak için koyu arayüze geçiş yapın.",
+    "select_language_description": "Dil tercihin anında uygulanır ve cihazında saklanır.",
+    "dark_mode": "Karanlık Tema Aktif",
+    "dark_mode_description": "Düşük ışıkta göz yorgunluğunu azaltmak için koyu arayüze geç.",
     "turkish": "Türkçe",
     "english": "İngilizce"
   },
   "menu": {
-    "dashboard": "Gösterge Paneli",
+    "dashboard": "Kontrol Paneli",
     "management": "Yönetim",
-    "home": "Evler",
+    "home": "Anasayfa",
     "customer": "Müşteriler",
-    "order": "Siparişler"
+    "order": "Siparişler",
+    "invoice": "Faturalar"
   },
   "modules": {
     "customers": {
       "index": "Müşteriler",
-      "create": "Müşteri Ekle",
+      "create": "Müşteri Oluştur",
       "show": "Müşteri Detayları",
       "edit": "Müşteri Düzenle",
       "save": "Müşteri Kaydet",
@@ -38,68 +41,79 @@
       "index": "Siparişler",
       "create": "Sipariş Oluştur",
       "show": "Sipariş Detayları",
-      "edit": "Siparişi Düzenle",
+      "edit": "Sipariş Düzenle",
       "save": "Siparişi Kaydet",
       "update": "Siparişi Güncelle"
+    },
+    "invoices": {
+      "index": "Faturalar",
+      "create": "Fatura Oluştur",
+      "show": "Fatura Detayları",
+      "edit": "Fatura Düzenle",
+      "save": "Faturayı Kaydet",
+      "update": "Faturayı Güncelle"
     }
   },
   "views": {
+    "dashboard": {
+      "daily_balance": "Günlük Bakiye"
+    },
     "customer": {
       "name": "Müşteri Adı",
-      "name_description": "Müşterinin tam adını giriniz.",
+      "name_description": "Lütfen müşterinin tam adını girin.",
       "email": "E-posta Adresi",
-      "email_description": "Geçerli bir e-posta adresi giriniz.",
+      "email_description": "Geçerli bir e-posta adresi girin.",
       "phone": "Telefon Numarası",
-      "phone_description": "Müşterinin telefon numarasını giriniz.",
+      "phone_description": "Müşterinin telefon numarasını girin.",
       "status": "Durum",
-      "status_description": "Müşterinin durumunu seçiniz.",
+      "status_description": "Müşterinin durumunu seçin.",
       "type": "Müşteri Türü",
-      "type_description": "Bireysel mi kurumsal mı olduğunu belirtiniz.",
+      "type_description": "Müşteri bireysel mi yoksa şirket mi belirtin.",
       "active": "Aktif",
       "inactive": "Pasif",
       "contact_person": "Yetkili Kişi",
-      "contact_person_description": "Bu müşteri için yetkili kişiyi giriniz.",
+      "contact_person_description": "Bu müşteri için yetkili kişi kim?",
       "tax_number": "Vergi Numarası",
-      "tax_number_description": "Varsa vergi numarasını giriniz.",
+      "tax_number_description": "Varsa vergi numarasını girin.",
       "tax_office": "Vergi Dairesi",
-      "tax_office_description": "Vergi dairesi adını giriniz.",
+      "tax_office_description": "Vergi dairesi adını girin.",
       "country": "Ülke",
-      "country_description": "Müşterinin bulunduğu ülkeyi belirtiniz.",
+      "country_description": "Müşterinin bulunduğu ülkeyi belirtin.",
       "address": "Adres",
-      "address_description": "Müşterinin tam adresini giriniz.",
+      "address_description": "Müşterinin tam adresini girin.",
       "notes": "Notlar",
-      "notes_description": "Bu müşteri hakkında ek bilgiler giriniz.",
-      "sidebar_title": "Müşteri Bilgileri",
+      "notes_description": "Müşteriyle ilgili ek bilgi varsa belirtin.",
+      "sidebar_title": "Müşteri Detayları",
       "created_at": "Oluşturulma Tarihi",
       "status_true": "Aktif",
       "status_false": "Pasif",
       "type_individual": "Bireysel",
-      "type_company": "Kurumsal"
+      "type_company": "Şirket"
     },
     "order": {
-      "name": "Sipariş ID",
-      "step_customer": "Müşteri Bilgileri",
+      "name": "Sipariş No",
+      "step_customer": "Müşteri Bilgisi",
       "step_products": "Ürünler",
       "step_final": "Sipariş Detayları",
       "step_preview": "Önizleme",
       "customer": "Müşteri",
-      "customer_description": "Siparişi veren müşteriyi seçiniz.",
+      "customer_description": "Siparişi veren müşteriyi seçin.",
       "order_note": "Sipariş Notu",
-      "order_note_description": "Sipariş hakkında ek bilgi veya açıklama.",
+      "order_note_description": "Siparişle ilgili ek notlar veya açıklamalar.",
       "product": "Ürün",
-      "product_description": "Siparişe eklenecek ürünü seçiniz.",
+      "product_description": "Siparişe eklenecek ürünü seçin.",
       "products": "Ürünler",
       "quantity": "Adet",
-      "quantity_description": "Üründen kaç adet sipariş edildiğini belirtiniz.",
-      "price": "Fiyat",
+      "quantity_description": "Üründen kaç adet sipariş edildiğini belirtin.",
+      "price": "Birim Fiyat",
       "price_description": "Seçilen ürünün birim fiyatı.",
       "total_price": "Toplam Tutar",
       "date": "Sipariş Tarihi",
-      "date_description": "Siparişin oluşturulduğu tarihi belirleyiniz.",
+      "date_description": "Siparişin oluşturulduğu tarihi belirleyin.",
       "shipping_method": "Kargo Yöntemi",
-      "shipping_method_description": "Siparişin nasıl gönderileceğini belirtiniz.",
+      "shipping_method_description": "Siparişin nasıl gönderileceğini belirtin.",
       "status": "Durum",
-      "status_description": "Siparişin mevcut durumunu seçiniz.",
+      "status_description": "Siparişin mevcut durumunu seçin.",
       "status_pending": "Beklemede",
       "status_shipped": "Kargolandı",
       "status_delivered": "Teslim Edildi",
@@ -108,6 +122,16 @@
       "total_products": "Toplam Ürün",
       "total": "Toplam",
       "product_details": "Ürün Detayları"
+    },
+    "invoice": {
+      "number": "Fatura Numarası",
+      "customer": "Müşteri",
+      "note": "Sipariş Notu",
+      "products": "Ürünler",
+      "total_price": "Toplam Tutar",
+      "date": "Fatura Tarihi",
+      "status": "Sipariş Durumu",
+      "total_products": "Toplam Ürün"
     }
   }
 }
